# lab_opengl

./: CMakeLists.txt  generate_project.py  main.cpp
OpenGL/: Camera.cpp  Camera.h  GLMTest.h  OpenGLEngine.cpp  OpenGLTest.cpp  OpenGLTest.h  OpenGLUtils.cpp  OpenGLUtils.h  OpenGlEngine.h  OpenGlLab.cpp  OpenGlLab.h  Shader.cpp
OpenGLTest/: OpenGLTest.cpp  OpenGLTest.h  Shader.h
OpenGLTest/shaders/: core.vs
Utils/: ImageLoader.cpp
include/opengl/: Camera.h  OpenGlLab.h  Shader.h
projects/default/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  opengl_lab.sln  opengl_lab.vcxproj  opengl_lab.vcxproj.filters
projects/default/opengl_lab.dir/Debug/opengl_lab.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  opengl_lab.lastbuildstate
projects/default/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
projects/default/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
shaders/: core.fs  core.vs
source/: main.cpp
source/OpenGL/: GLMTest.cpp  Shader.cpp
